Added styles to the project

--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="Stylesheet" href="styles.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Caprasimo&display=swap');
+    </style>
 </head>
 <body>
-   <div class="books-container">
+    <header>
+        <div class="nav-bar">
+            <p>Bookspace</p>
+            <button class = "new-book">Add a Book</button>
+        </div>
+    </header>
 
-   </div>
-   <button class = "new-book">New Book</button>
+    <div class="books-container"></div>
+    <div class="form-container"></div>
     <script src="srcipt.js"></script>
 </body>
 </html>
